Adds Hero detail page.

--- a/src/components/card/HeroCard.css
+++ b/src/components/card/HeroCard.css
@@ -30,3 +30,8 @@
 .card > .card-body > .hero-content > .card-title {
     color: white
 }
+
+.card a {
+    text-decoration: none;
+    color: white
+}
