--- a/src/components/card/HeroCard.css
+++ b/src/components/card/HeroCard.css
@@ -35,3 +35,24 @@
     text-decoration: none;
     color: white
 }
+
+@media screen and (max-width: 1340px) {
+    .card {
+        width: 31.8%;
+        height: 22vh;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 48%;
+        height: 24vh;
+    }
+}
+
+@media screen and (max-width: 532px) {
+    .card {
+        width: 98%;
+        height: 26vh;
+    }
+}
